--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
+    "tailwindcss-motion": "^1.1.0",
     "typescript": "^5"
   }
 }
